== Version 2.4.15 Work in progress (not released -- this is a draft) ==

== Version 2.4.14 ==

  Users side :
  ------------
    # The HTML directive to not be indexed by search engine has been added.
    # Some validation issues with bulk-edition have been fixed.
      It could be observed when editing several Invoices at once for example.
    # There were permissions issues with EntityFilters & HeaderFilters ;
      public filters could be edited/deleted by users with no app permission.
    # The selector with lazy-loading should perform less queries (delay raised to 300ms).
    # There was a broken link in CremePropertyType detail-view.
    # In the "About" page :
        - the IRC address  has been fixed.
        - the version is displayed only when you are authenticated.
    # Apps :
        * Billing :
            - The button to delete Payment Information (on Organisations' detail-views) was broken.
        * Reports :
            - The date filter in the download popup was broken.
        * Mobile :
            - A hard-coded URL pattern has been fixed (to use the reverse pattern matching as usual).
        * Assistants :
            - The code of Alert has been improved (a query is avoided when creating a CremeEntity).

  Developers side :
  -----------------

    Non breaking changes :
    ----------------------
        # The debounce delay of 'creme_core.forms.enumerable.EnumerableSelect' can be configured.
        # Apps :
            * Billing :
                - The conversion view is more robust (the relationship creation could crash).


== Version 2.4.13 ==

  Users side :
  ------------
    # There were several issues with fields configured as required.
      It could notably appeared in quick forms:
        - Fields which were added (because they are not in the default forms) cause a validation error.
        - Fields corresponding to a ForeignKey caused an error 500.